--- a/.github/workflows/packer_fmt.yaml
+++ b/.github/workflows/packer_fmt.yaml
@@ -10,19 +10,47 @@ env:
   PRODUCT_VERSION: "1.9.4"
 
 jobs:
-  packer:
+  find_hcl:
     runs-on: ubuntu-latest
-    name: Run Packer
+    if: github.event.pull_request.state == 'open'
+    outputs:
+      hcl_dirs: ${{ steps.find-modified-hcl.outputs.hcl_dirs }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Find modified HCL
         id: find-modified-hcl
-        run: |
-          echo "Changed files:"
-          echo "::set-output name=files::$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})"
         shell: bash
+        run: |
+          # mark the directory safe for git operations
+          make safe-directory
+
+          MODIFIED_FILES=($(git diff --name-only origin/${BASE_REF} origin/${HEAD_REF}))
+          [[ -n "$MODIFIED_FILES" ]] && MODIFIED_DIRS=($(xargs -n 1 dirname <<< "${MODIFIED_FILES[@]}" | sort | uniq)) || true
+          [[ -n "$MODIFIED_DIRS" ]] && MODIFIED_HCL_DIRS=($(for f in "${MODIFIED_FILES[@]}"; do [[ "$f" == *.hcl ]] && dirname "$f" || true; done | sort | uniq)) || true
+
+          if [[ -z "$MODIFIED_HCL_DIRS" ]]; then
+            echo "No HCL files changed in this PR. Skipping Packer fmt."
+            echo "run_fmt=false" >> $GITHUB_OUTPUT
+            echo "hcl_dirs=[]" >> $GITHUB_OUTPUT
+          else
+            echo "Running checks on the following Packer components:"
+            printf -- "- %s\n" "${MODIFIED_HCL_DIRS[@]}"
+            echo "run_fmt=true" >> $GITHUB_OUTPUT
+            echo "hcl_dirs=$(IFS=,; printf '["%s"]\n' "${MODIFIED_HCL_DIRS[*]}" | sed 's/,/", "/g')" >> $GITHUB_OUTPUT
+          fi
+  packer:
+    runs-on: ubuntu-latest
+    needs: find_hcl
+    if: github.event.pull_request.state == 'open' && needs.find_hcl.outputs.run_fmt == 'true'
+    strategy:
+      fail-fast: false
+      hcl:
+        dir: ${{ fromJson(needs.find_hcl.outputs.hcl_dirs) }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Setup `packer`
         uses: hashicorp/setup-packer@main
@@ -32,16 +60,5 @@ jobs:
 
       - name: Run `packer init` and `packer fmt`
         id: packer-fmt
-        run: |
-          modified_hcl="${{ steps.changed-files.outputs.files }}"
-          for file in $modified_hcl; do
-            if [[ "$file" == *".hcl" ]]; then
-              directory=$(dirname "$file")
-              cd "$directory"
-
-              packer init "$file"
-              packer fmt "$file"
-          
-              cd -
-            fi
-          done
+        run: packer fmt
+        working_directory: ${{ hcl.dir }}
