--- a/.github/workflows/packer_fmt.yaml
+++ b/.github/workflows/packer_fmt.yaml
@@ -23,20 +23,21 @@ jobs:
         id: find-modified-hcl
         shell: bash
         run: |
-          MODIFIED_FILES=($(git diff --name-only origin/${BASE_REF} origin/${HEAD_REF}))
+          MODIFIED_FILES=($(git diff --name-only origin/${{ github.base_ref }} origin/${{ github.head_ref }}))
           [[ -n "$MODIFIED_FILES" ]] && MODIFIED_DIRS=($(xargs -n 1 dirname <<< "${MODIFIED_FILES[@]}" | sort | uniq)) || true
           [[ -n "$MODIFIED_DIRS" ]] && MODIFIED_HCL_DIRS=($(for f in "${MODIFIED_FILES[@]}"; do [[ "$f" == *.hcl ]] && dirname "$f" || true; done | sort | uniq)) || true
 
           if [[ -z "$MODIFIED_HCL_DIRS" ]]; then
             echo "No HCL files changed in this PR. Skipping Packer fmt."
-            echo "run_fmt=false" >> $GITHUB_OUTPUT
-            echo "hcl_dirs=[]" >> $GITHUB_OUTPUT
+            echo "run_fmt=false" >> $GITHUB_ENV
+            echo "hcl_dirs=[]" >> $GITHUB_ENV
           else
             echo "Running checks on the following Packer components:"
             printf -- "- %s\n" "${MODIFIED_HCL_DIRS[@]}"
-            echo "run_fmt=true" >> $GITHUB_OUTPUT
-            echo "hcl_dirs=$(IFS=,; printf '["%s"]\n' "${MODIFIED_HCL_DIRS[*]}" | sed 's/,/", "/g')" >> $GITHUB_OUTPUT
+            echo "run_fmt=true" >> $GITHUB_ENV
+            echo "hcl_dirs=$(IFS=,; printf '["%s"]\n' "${MODIFIED_HCL_DIRS[*]}" | sed 's/,/", "/g')" >> $GITHUB_ENV
           fi
+
   packer:
     runs-on: ubuntu-latest
     needs: find_hcl
