--- a/.github/workflows/packer_fmt.yaml
+++ b/.github/workflows/packer_fmt.yaml
@@ -64,9 +64,5 @@ jobs:
 
       - name: Run `packer init` and `packer fmt`
         id: packer-fmt
-        run: |
-          for dir in ${{ fromJson(needs.find_hcl.outputs.hcl_dirs) }}; do
-            pushd "$dir"
-            packer fmt .
-            popd
-          done
+        working_directory: ${{ fromJson(needs.find_hcl.outputs.hcl_dirs) }}
+        run: packer fmt
