--- a/.github/workflows/packer_fmt.yaml
+++ b/.github/workflows/packer_fmt.yaml
@@ -47,7 +47,7 @@ jobs:
   packer:
     runs-on: ubuntu-latest
     needs: find_hcl
-    if: github.event.pull_request.state == 'open' && needs.find_hcl.outputs.run_fmt == 'true'
+    if: github.event.pull_request.state == 'open' # && needs.find_hcl.outputs.run_fmt == 'true'
     strategy:
       fail-fast: false
     steps:
