--- a/.github/workflows/packer_fmt.yaml
+++ b/.github/workflows/packer_fmt.yaml
@@ -65,16 +65,7 @@ jobs:
         with:
           version: ${{ env.PRODUCT_VERSION }}
 
-      - name: Set directories
-        id: set-dirs
-        run: |
-           echo "dirs<<EOF" >> $GITHUB_ENV
-           echo ${{needs.find_hcl.outputs.hcl_dirs}} >> $GITHUB_ENV
-           echo "EOF" >> $GITHUB_ENV
-
-      - name: Run packer fmt
-        run: |
-          for dir in ${{ env.dirs }}; do
-            cd $dir
-            packer fmt
-          done
+      - name: Run `packer fmt`
+        id: packer-fmt
+        working_directory: ${{ fromJson(needs.find_hcl.outputs.hcl_dirs) }}
+        run: packer fmt
