--- a/.github/workflows/packer_fmt.yaml
+++ b/.github/workflows/packer_fmt.yaml
@@ -17,11 +17,11 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.pull_request.state == 'open'
     outputs:
-      run_fmt: ${{ steps.find-modified-hcl.outputs.run_fmt }}
+      run_fmt: true
       hcl_dirs: ${{ steps.find-modified-hcl.outputs.hcl_dirs }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -55,7 +55,7 @@ jobs:
       fail-fast: false
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
