--- a/.github/workflows/packer_fmt.yaml
+++ b/.github/workflows/packer_fmt.yaml
@@ -67,7 +67,7 @@ jobs:
       - name: Run `packer fmt`
         id: packer-fmt
         run: |
-          hcl_dirs="${{ needs.find_hcl.outputs.run_fmt }}"
+          hcl_dirs="${{ needs.find_hcl.outputs.hcl_dirs }}"
           for dir in hcl_dirs; do
             cd $dir
             packer fmt .
