--- a/.github/workflows/packer_fmt.yaml
+++ b/.github/workflows/packer_fmt.yaml
@@ -67,7 +67,7 @@ jobs:
       - name: Run `packer fmt`
         id: packer-fmt
         env:
-          dirs: ${{ needs.find_hcl.outputs.hcl_dirs }}
+          dirs: ${{ fromJson(needs.find_hcl.outputs.hcl_dirs) }}
         run: |
           hcl_dirs="${{ env.dirs }}"
           for dir in $hcl_dirs; do
