--- a/.github/workflows/packer_fmt.yaml
+++ b/.github/workflows/packer_fmt.yaml
@@ -51,6 +51,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: find_hcl
     if: github.event.pull_request.state == 'open' && needs.find_hcl.outputs.run_fmt == 'true'
+    strategy:
+      fail-fast: false
+      matrix:
+        dir: ${{ fromJson(needs.find_hcl.outputs.hcl_dirs) }}
 
     steps:
       - name: Checkout
@@ -67,4 +71,8 @@ jobs:
       - name: Run `packer fmt`
         id: packer-fmt
         run: |
-          echo -e "${{ needs.find_hcl.outputs.hcl_dirs }}"
+          hcl_dirs="${{ matrix.dir }}"
+          for dir in $hcl_dirs; do
+            cd $dir
+            packer fmt .
+          done
