--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Run TFLint
         uses: The-Infra-Company/github-action-tflint-upload@8baa08e249e702700b14d35b48a7b589edd5a4a9
+        env:
+          ACTIONS_STEP_DEBUG: true
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           working_directory: "terraform"
