fix: update hash

--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -25,5 +25,5 @@ jobs:
           ACTIONS_STEP_DEBUG: true
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          working_directory: "terraform"
+          working_directory: "terraform/modules/vpc"
           tflint_rulesets: "aws"
