--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -20,10 +20,10 @@ jobs:
         working-directory: terraform  # Ensure we run init inside the Terraform directory
 
       - name: Run TFLint
-        uses: The-Infra-Company/github-action-tflint-upload@2cc532c97e8897fce9e1e8810aa92f04a3e5ab40 # 0.2.0
+        uses: The-Infra-Company/github-action-tflint-upload@2cc532c97e8897fce9e1e8810aa92f04a3e5ab40
         env:
           ACTIONS_STEP_DEBUG: true
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          tflint_target_dir: "terraform/modules/vpc"
+          working_directory: "terraform/modules/vpc"
           tflint_rulesets: "aws"
